--- a/Program/Client_Side/styles.css
+++ b/Program/Client_Side/styles.css
@@ -1,11 +1,14 @@
 html, body {
 	height: 100%;
+	width: 100%;
 	margin: 0;
 	padding: 0;
 }
 #main-container {
-    height: 100%
+    height: 100%;
+    width: 100%;
 }
 #map {
-    height: 100%
+    height: 50%;
+    width: 50%;
 }
